--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,7 +6,7 @@ body{
 }
 
 header{
-    background-color: rgb(190, 170, 90, 1);
+    background-color: rgb(239, 225, 167);
 }
 
 nav{
@@ -20,7 +20,7 @@ main{
 }
 
 footer{
-    background-color: rgb(190, 170, 90, 1);
+    background-color: rgb(239, 225, 167);
 }
 
 ul{
